# CUDALibrarySamples

./: CMakeLists.txt
NPP/batchedLabelMarkersAndCompression/: CMakeLists.txt  batchedLabelMarkersAndCompression.h
NPP/distanceTransform/: CMakeLists.txt
NPP/findContour/: CMakeLists.txt
NPP/watershedSegmentation/: CMakeLists.txt  watershedSegmentation.h
cmake/: common_example.cmake
cmake/modules/: FindCUTENSOR.cmake  FindcuSPARSELt.cmake  FindcuTENSOR.cmake  FindnvJPEG2000.cmake
cuBLAS/: CMakeLists.txt
cuBLAS/Extensions/AxpyEx/: CMakeLists.txt
cuBLAS/Extensions/Cherk3mEx/: CMakeLists.txt
cuBLAS/Extensions/CherkEx/: CMakeLists.txt
cuBLAS/Extensions/Csyrk3mEx/: CMakeLists.txt
cuBLAS/Extensions/CsyrkEx/: CMakeLists.txt
cuBLAS/Extensions/DotEx/: CMakeLists.txt
cuBLAS/Extensions/GemmBatchedEx/: CMakeLists.txt
cuBLAS/Extensions/GemmEx/: CMakeLists.txt
cuBLAS/Extensions/GemmStridedBatchedEx/: CMakeLists.txt
cuBLAS/Extensions/Nrm2Ex/: CMakeLists.txt
cuBLAS/Extensions/RotEx/: CMakeLists.txt
cuBLAS/Extensions/ScalEx/: CMakeLists.txt
cuBLAS/Extensions/dgmm/: CMakeLists.txt
cuBLAS/Extensions/geam/: CMakeLists.txt
cuBLAS/Extensions/tpttr/: CMakeLists.txt
cuBLAS/Extensions/trttp/: CMakeLists.txt
cuBLAS/Level-1/amax/: CMakeLists.txt
cuBLAS/Level-1/amin/: CMakeLists.txt
cuBLAS/Level-1/asum/: CMakeLists.txt
cuBLAS/Level-1/axpy/: CMakeLists.txt
cuBLAS/Level-1/copy/: CMakeLists.txt
cuBLAS/Level-1/dot/: CMakeLists.txt
cuBLAS/Level-1/nrm2/: CMakeLists.txt
cuBLAS/Level-1/rot/: CMakeLists.txt
cuBLAS/Level-1/rotg/: CMakeLists.txt
cuBLAS/Level-1/rotm/: CMakeLists.txt
cuBLAS/Level-1/rotmg/: CMakeLists.txt
cuBLAS/Level-1/scal/: CMakeLists.txt
cuBLAS/Level-1/swap/: CMakeLists.txt
cuBLAS/Level-2/gbmv/: CMakeLists.txt
cuBLAS/Level-2/gemv/: CMakeLists.txt
cuBLAS/Level-2/ger/: CMakeLists.txt
cuBLAS/Level-2/hbmv/: CMakeLists.txt
cuBLAS/Level-2/hemv/: CMakeLists.txt
cuBLAS/Level-2/her/: CMakeLists.txt
cuBLAS/Level-2/her2/: CMakeLists.txt
cuBLAS/Level-2/hpmv/: CMakeLists.txt
cuBLAS/Level-2/hpr/: CMakeLists.txt
cuBLAS/Level-2/hpr2/: CMakeLists.txt
cuBLAS/Level-2/sbmv/: CMakeLists.txt
cuBLAS/Level-2/spmv/: CMakeLists.txt
cuBLAS/Level-2/spr/: CMakeLists.txt
cuBLAS/Level-2/spr2/: CMakeLists.txt
cuBLAS/Level-2/symv/: CMakeLists.txt
cuBLAS/Level-2/syr/: CMakeLists.txt
cuBLAS/Level-2/syr2/: CMakeLists.txt
cuBLAS/Level-2/tbmv/: CMakeLists.txt
cuBLAS/Level-2/tbsv/: CMakeLists.txt
cuBLAS/Level-2/tpmv/: CMakeLists.txt
cuBLAS/Level-2/tpsv/: CMakeLists.txt
cuBLAS/Level-2/trmv/: CMakeLists.txt
cuBLAS/Level-2/trsv/: CMakeLists.txt
cuBLAS/Level-3/gemm/: CMakeLists.txt
cuBLAS/Level-3/gemm3m/: CMakeLists.txt
cuBLAS/Level-3/gemmBatched/: CMakeLists.txt
cuBLAS/Level-3/gemmStridedBatched/: CMakeLists.txt
cuBLAS/Level-3/hemm/: CMakeLists.txt
cuBLAS/Level-3/her2k/: CMakeLists.txt
cuBLAS/Level-3/herk/: CMakeLists.txt
cuBLAS/Level-3/herkx/: CMakeLists.txt
cuBLAS/Level-3/symm/: CMakeLists.txt
cuBLAS/Level-3/syr2k/: CMakeLists.txt
cuBLAS/Level-3/syrk/: CMakeLists.txt
cuBLAS/Level-3/syrkx/: CMakeLists.txt
cuBLAS/Level-3/trmm/: CMakeLists.txt
cuBLAS/Level-3/trsm/: CMakeLists.txt
cuBLAS/Level-3/trsmBatched/: CMakeLists.txt
cuBLAS/cmake/: cublas_example.cmake
cuBLASLt/: CMakeLists.txt
cuBLASLt/LtDgemmPresetAlgo/: CMakeLists.txt
cuBLASLt/LtHSHgemmStridedBatchSimple/: CMakeLists.txt
cuBLASLt/LtIgemmTensor/: CMakeLists.txt
cuBLASLt/LtPlanarComplex/: CMakeLists.txt
cuBLASLt/LtSgemm/: CMakeLists.txt
cuBLASLt/LtSgemmCustomFind/: CMakeLists.txt
cuBLASLt/LtSgemmSimpleAutoTuning/: CMakeLists.txt
cuBLASLt/cmake/: cublaslt_example.cmake
cuFFT/1d_c2c/: CMakeLists.txt
cuFFT/1d_mgpu_c2c/: 1d_mgpu_c2c_example.cpp  CMakeLists.txt
cuFFT/1d_r2c/: CMakeLists.txt
cuFFT/2d_c2r/: CMakeLists.txt
cuFFT/3d_c2c/: CMakeLists.txt
cuFFT/3d_mgpu_c2c/: 3d_mgpu_c2c_example.cpp  CMakeLists.txt
cuFFT/3d_mgpu_r2c_c2r/: 3d_mgpu_r2c_c2r_example.cpp  CMakeLists.txt
cuRAND/cmake/: curand_example.cmake
cuSOLVER/: CMakeLists.txt
cuSOLVER/MgGetrf/: CMakeLists.txt
cuSOLVER/MgPotrf/: CMakeLists.txt
cuSOLVER/MgSyevd/: CMakeLists.txt
cuSOLVER/Xgeqrf/: CMakeLists.txt
cuSOLVER/Xgesvd/: CMakeLists.txt
cuSOLVER/Xgesvdp/: CMakeLists.txt
cuSOLVER/Xgesvdr/: CMakeLists.txt
cuSOLVER/Xgetrf/: CMakeLists.txt
cuSOLVER/Xpotrf/: CMakeLists.txt
cuSOLVER/Xsyevd/: CMakeLists.txt
cuSOLVER/Xsyevdx/: CMakeLists.txt
cuSOLVER/Xtrtri/: CMakeLists.txt
cuSOLVER/cmake/: cusolver_example.cmake
cuSOLVER/csrqr/: CMakeLists.txt
cuSOLVER/gesv/: CMakeLists.txt
cuSOLVER/gesvd/: CMakeLists.txt
cuSOLVER/gesvdaStridedBatched/: CMakeLists.txt
cuSOLVER/gesvdj/: CMakeLists.txt
cuSOLVER/gesvdjBatched/: CMakeLists.txt
cuSOLVER/getrf/: CMakeLists.txt
cuSOLVER/orgqr/: CMakeLists.txt
cuSOLVER/ormqr/: CMakeLists.txt
cuSOLVER/potrfBatched/: CMakeLists.txt
cuSOLVER/syevd/: CMakeLists.txt
cuSOLVER/syevdx/: CMakeLists.txt
cuSOLVER/syevj/: CMakeLists.txt
cuSOLVER/syevjBatched/: CMakeLists.txt
cuSOLVER/sygvd/: CMakeLists.txt
cuSOLVER/sygvdx/: CMakeLists.txt
cuSOLVER/sygvj/: CMakeLists.txt
cuSPARSE/: CMakeLists.txt
cuSPARSE/axpby/: CMakeLists.txt
cuSPARSE/bicgstab/: CMakeLists.txt  bicgstab_example.c
cuSPARSE/cg/: CMakeLists.txt  cg_example.c
cuSPARSE/cmake/: cusparse_example.cmake
cuSPARSE/compression/: CMakeLists.txt
cuSPARSE/coosort/: CMakeLists.txt
cuSPARSE/dense2sparse_blockedell/: CMakeLists.txt
cuSPARSE/dense2sparse_csr/: CMakeLists.txt
cuSPARSE/gather/: CMakeLists.txt
cuSPARSE/gpsvInterleavedBatch/: CMakeLists.txt
cuSPARSE/graph_capture/: CMakeLists.txt
cuSPARSE/rot/: CMakeLists.txt
cuSPARSE/scatter/: CMakeLists.txt
cuSPARSE/sddmm_csr/: CMakeLists.txt
cuSPARSE/sddmm_csr_batched/: CMakeLists.txt
cuSPARSE/sparse2dense_csr/: CMakeLists.txt
cuSPARSELt/: CMakeLists.txt
cuTENSOR/: CMakeLists.txt
cuTENSORMg/: CMakeLists.txt
nvJPEG2000/nvJPEG2000-Decoder-Tile-Partial/: CMakeLists.txt
nvTIFF/: README.md
nvTIFF/nvTIFF-Decode-Encode/: CMakeLists.txt
(+44 files in other folders)
